0029775: Modeling Data - BRepAdaptor_CompCurve Parameterization Is Incorrect

Added wire connectivity requirement to class documentation of
BRepAdaptor_CompCurve.